# cxcxc_interview

./: .env.example  .gitignore  README.md  pyproject.toml
HW1/src/: main.py
HW2/src/: main.py
HW2/src/controllers/: user.py
HW2/src/dao/: user.py
HW2/src/models/: user.py
HW2/src/services/: user.py
HW3/src/: main.py
HW4/: HW1.Dockerfile  HW2.Dockerfile  HW3.Dockerfile
